--- a/GettingStartedGuides/Win32_GettingStarted/WebView2GettingStarted.vcxproj
+++ b/GettingStartedGuides/Win32_GettingStarted/WebView2GettingStarted.vcxproj
@@ -25,6 +25,10 @@
       <Configuration>Release</Configuration>
       <Platform>ARM64</Platform>
     </ProjectConfiguration>
+    <ProjectConfiguration Include="TestRun|ARM64">
+      <Configuration>TestRun</Configuration>
+      <Platform>ARM64</Platform>
+    </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
